<resources>
    <string name="app_name">Papp</string>

    <string name="my_udacity_portfolio">My App Portfolio!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger App</string>
    <string name="xyz_reader">XYZ Reader App</string>
    <string name="my_own_capstone">Capstone: My Own App</string>
</resources>
