<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdeeaf0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:id="@+id/textView"
        android:textSize="24dp"
        android:textColor="#ff002646"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:background="#F08C35"
        android:textColor="#ff000000"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="sendMessage"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginBottom="6dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:background="#F08C35"
        android:textColor="#ff000000"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="sendMessage1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:gravity="center"
        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="6dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:background="#F08C35"
        android:textColor="#ff000000"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="sendMessage2"
        android:layout_above="@+id/button4"
        android:layout_marginBottom="6dp"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:background="#F08C35"
        android:textColor="#ff000000"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="sendMessage3"
        android:layout_above="@+id/button5"
        android:layout_marginBottom="6dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:background="#F08C35"
        android:textColor="#ff000000"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="sendMessage4"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_above="@+id/button6"
        android:layout_marginBottom="6dp"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_own_capstone"
        android:id="@+id/button6"
        android:background="#ffd3003a"
        android:textColor="#ffffffff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="sendMessage5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="61dp" />

</RelativeLayout>
